@@ -1,3 +1,15 @@
+Sat Sep 30 14:00:33 UTC 2006  Steve Huston  <shuston@riverace.com>
+
+        * tests/Cached_Allocator_Test.cpp:
+        * tests/Codecs_Test.cpp:
+        * tests/Enum_Interfaces_Test.cpp:
+        * tests/Get_Opt_Test.cpp (run_test):
+        * tests/Naming_Test.cpp:
+        * tests/Reactor_Notification_Queue_Test.cpp:
+        * tests/Reference_Counted_Event_Handler_Test.cpp:
+        * tests/Timer_Queue_Reference_Counting_Test.cpp:
+          Correct logging format for wide-char build.
+
 Fri Sep 29 18:54:29 UTC 2006  Steve Huston  <shuston@riverace.com>
 
 	* ace/OS_NS_signal.inl (sigaction): In the !ACE_HAS_SIGACTION_CONSTP2
